--- a/fluentd/fluent.conf
+++ b/fluentd/fluent.conf
@@ -12,9 +12,9 @@
 <label @mainstream>
   <match nginx.**>
     @type file
-    @id   output_docker1
-    path         /fluentd/log/docker.*.log
-    symlink_path /fluentd/log/docker.log
+    @id   output_nginx
+    path         /fluentd/log/nginx.*.log
+    symlink_path /fluentd/log/nginx.log
     append       true
     time_slice_format %Y%m%d
     time_slice_wait   1m
