--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,13 @@
 version: '2'
 services:
-  rsyslog_agent:
-    build: 'rsyslog-agent/'
+  fluentd:
+    image: fluent/fluentd
+    volumes:
+      - ./fluentd/etc:/fluentd/etc
     ports:
-      - "514/tcp:514/tcp"
+      - "24224:24224"
     expose:
-      - "514/tcp"
-    environment:
-      - RSYSLOG_SERV_HOST=rsyslog_server:515
-    networks:
-      - trial-net
-  rsyslog_server:
-    build: 'rsyslog-server/'
-    ports:
-      - "515/tcp:515/tcp"
-    expose:
-      - "515/tcp"
+      - "24224"
     networks:
       - trial-net
   app:
@@ -24,15 +16,13 @@ services:
       - "80:80"
       - "443:443"
     logging:
-      driver: syslog
+      driver: fluentd
       options:
-        syslog-address: "tcp://localhost:514"
-        syslog-facility: daemon
-        tag: nginx
+        tag: "nginx.{{.Name}}"
     networks:
       - trial-net
     depends_on:
-      - rsyslog_agent
+      - fluentd
 networks:
   trial-net:
     external: true
